methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:10: error: not enough arguments for method marquer: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    marquer()
           ^